# IVD

./: CMakeLists.txt  README.md  binarysourcegenerator.py  ivd-config.cmake.in  ivd.vim
contrib/irisutils/: easyuniquepointer.h  lexcompare.h  routine.h
src/: allmaterials.h  attribute.cpp  attribute.h  attributebodytypes.h  attributepositionpair.h  attributeset.cpp  attributeset.h  binaryexpressionprinter.h  canvas.h  cbindings.cpp  codeposition.h  color.cpp  color.h  compiler.cpp  compiler.h  corefonts.h  defaults.cpp  defaults.h  displayitem.cpp  displayitem.h  driver.h  element.h  environment.cpp  environment.h  event.h  expression.cpp  expression.h  geometry.h  geometryproposal.h  graph.cpp  graph.h  keywords.h  material.cpp  material.h  modelcontainer.h  modelitem.cpp  modelitembase.h  referenceattribute.cpp  referenceattribute.h  referenceattributeset.cpp  (+18 more)
src/material/: fallbackparagraphmaterial.cpp  fallbackparagraphmaterial.h  freelayoutmaterial.cpp  freelayoutmaterial.h  imagematerial.cpp  imagematerial.h  inlinelayoutmaterial.cpp  inlinelayoutmaterial.h  rowlayoutmaterial.cpp  rowlayoutmaterial.h  simplematerial.cpp  simplematerial.h  stacklayoutmaterial.cpp  stacklayoutmaterial.h  textrunmaterial.cpp  textrunmaterial.h
src/shaping/: line.h
src/specific_driver_sdl/: cairocanvas.cpp  cairocanvas.h  sdldriver.cpp  sdldriver.h  sdlwindow.cpp  sdlwindow.h  textdriver.cpp
src/tests/: COMPILE-ERROR.IVD  accept.sh  catch2testmain.cpp  fixme.ivd  fixme1.txt  fixme2.txt  lightruntime.cpp  linkedlist.cpp  modeltests.cpp  nestedmodels.cpp  recordplayback.cpp  runcompilertests.sh  serializingcompiler.cpp  test-scaffold.ivd
src/tests/errors/: badAttrkey.ivd  badPropertyBody.ivd  badUnnaturals.ivd  badlist.ivd  badsetanddeclarescope.ivd  badspec.ivd  expectingbodyhandlers.ivd  malformedAttrBodyRecovery.ivd  malformedclassheader.ivd  modelinunenumeratedelement.ivd  nameconflict.ivd  propertyError.ivd  recoverAfterBadUnnaturalNumber.ivd  remoracyclic.ivd  remoradeepEnumerationMismatch.ivd  remoraenumerationmismatch.ivd  remorafinalizedclass.ivd  remoraundefinedclass.ivd  tabserrorhandler.ivd
src/tests/errors/ivdserial/: badAttrkey.ivdserial  badUnnaturals.ivdserial  badlist.ivdserial  badsetanddeclarescope.ivdserial  badspec.ivdserial  expectingbodyhandlers.ivdserial  malformedAttrBodyRecovery.ivdserial  malformedclassheader.ivdserial  modelinunenumeratedelement.ivdserial  nameconflict.ivdserial  property.ivdserial  propertyError.ivdserial  recoverAfterBadUnnaturalNumber.ivdserial  remoracyclic.ivdserial  remoradeepEnumerationMismatch.ivdserial  remoraenumerationmismatch.ivdserial  remorafinalizedclass.ivdserial  remoraundefinedclass.ivdserial  tabserrorhandler.ivdserial
src/tests/model/: MEEEFIXMEEE.ivd  bindnum.ivd  commonparentdeduction.ivd  commonsiblingdeduction.ivd  compoundinvalidate.ivd  deeprootnested.ivd  instdestruct.ivd  modelinstancing.ivd  nested.ivd  notstate.ivd  order.ivd  setnum.ivd  singletriggercall.ivd  singletriggercallcompound.ivd  statesuck.ivd  stringbinding.ivd  triggerstate.ivd
src/tests/runtime/: advancedTextLayout.ivd  basicwindow.ivd  bugger.ivd  button-array.ivd  compoundStates.ivd  concurrenttest.py  constraint.ivd  cornertest.ivd  defaultTextSize.ivd  emptyitemsvboxtest.ivd  expandtest.ivd  firstivdsdltest.ivd  firsttexttest.ivd  freelayout.ivd  freelayout2.ivd  fullhover.ivd  greedyPrecedence.ivd  greedyPrecedence_var1.ivd  greedyPrecedence_var2.ivd  hbox.ivd  image.ivd  nestedboxes.ivd  nonscalardelay.ivd  sizeitemvboxtest.ivd  sizeitemvboxtest_var1.ivd  stacklayout.ivd  vbox.ivd
src/tests/runtime/reprodyne/: advancedTextLayout.x3th  basicwindow.ivd  compoundStates.x3th  compoundinvalidatestatic.x3th  cornertest.x3th  defaultTextSize.x3th  emptyitemsvboxtest.x3th  firstivdsdltest.x3th  firsttexttest.x3th  freelayout.x3th  freelayout2.x3th  fullhover.x3th  greedyPrecedence.x3th  greedyPrecedence_var1.x3th  greedyPrecedence_var2.x3th  greedyPrecedence_var3.x3th  hbox.x3th  image.x3th  nestedboxes.x3th  nonscalardelay.x3th  notstatestatic.x3th  popoutresize.x3th  sizeitemvboxtest.x3th  sizeitemvboxtest_var1.x3th  stacklayout.x3th  vbox.x3th
src/tests/runtime/unvalidated/: compoundinvalidatestatic.ivd  expandtest.ivd  firsttexttest.ivd  nestedboxes-variant1.ivd  nonscalardelay.ivd  notstatestatic.ivd  popoutresize.ivd  thisshouldnotcompile.ivd  toggle-bottom-expander.ivd
src/tests/valid/: animationgraph.ivd  articleValidVariant0.ivd  attrInExpression.ivd  basic.ivd  booleaninheritance.ivd  cellalignmnet.ivd  cellnames.ivd  classheaders.ivd  classprecedence.ivd  classusingmodelsforinstance.ivd  clearinherit.ivd  colorattr.ivd  colorliterals.ivd  compoundstatekeys.ivd  constraintcase1.ivd  declare.ivd  delay.ivd  dimensions.ivd  flatexpression.ivd  inheritStateOverrideOrder.ivd  inheritanceOverriding.ivd  inheritedvirtualstates.ivd  layout.ivd  margin.ivd  modelaccesstext.ivd  modelheaders.ivd  nestedexpression.ivd  orientation.ivd  positionwithin.ivd  precedence.ivd  property.ivd  remoraOperatorInFreeElement.ivd  remorabasic.ivd  remoracomplex.ivd  remoradeep.ivd  remoradeepmodels.ivd  remoradeeprootkey.ivd  remoramodelheaders.ivd  remorasandclassesohmy.ivd  remoravaluekeysubstitution.ivd  (+6 more)
src/tests/valid/ivdserial/: animationgraph.ivdserial  articleValidVariant0.ivdserial  attrInExpression.ivdserial  basic.ivdserial  booleaninheritance.ivdserial  cellalignmnet.ivdserial  cellnames.ivdserial  classheaders.ivdserial  classprecedence.ivdserial  classusingmodelsforinstance.ivdserial  clearinherit.ivdserial  colorattr.ivdserial  colorliterals.ivdserial  compoundstatekeys.ivdserial  constraintcase1.ivdserial  declare.ivdserial  delay.ivdserial  dimensions.ivdserial  expandcells.ivdserial  flatexpression.ivdserial  inheritStateOverrideOrder.ivdserial  inheritanceOverriding.ivdserial  layout.ivdserial  (+24 more)
src/user_include/: IVD_c.h  IVD_constants_c.h  IVD_cpp.h  IVD_status.h
src/user_include/cpp/: IVD_cpp.h  IVD_geometry.h  IVD_geometry_proposal.h
src/widgets/: boxlayout.cpp  boxlayout.h  image.cpp  image.h  stacklayout.cpp  stacklayout.h
